# patchwork

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  README.rst  dev-requirements.txt  files.py  pyproject.toml  setup.cfg  setup.py  tasks.py
.github/workflows/: tests.yaml
demos/: fabfile.py
docs/: changelog.rst  conf.py  index.rst  installation.rst
docs/api/: auth.rst  environment.rst  files.rst  info.rst  packages.rst  transfers.rst  util.rst
patchwork/: auth.py  backup.py  commands.py  environment.py  files.py  git.py  info.py  supervisor.py  transfers.py  users.py  util.py
src/patchwork/: environment.py  files.py  info.py  transfers.py  util.py
test/: test_distro.py
tests/: _util.py  conftest.py  files.py  info.py  transfers.py  util.py
